--- a/amazon.html
+++ b/amazon.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/shared/general.css">
     <link rel="stylesheet" href="styles/shared/amazon-header.css">
     <link rel="stylesheet" href="styles/pages/amazon.css">
+    <script></script>
   </head>
   <body>
     <div class="amazon-header">
@@ -45,14 +46,14 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity">3</div>
+          <div class="js-cart-quantity cart-quantity">0</div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
     </div>
     
     <div class="main">
-      <div class="products-grid">
+      <div class="js-products-grid products-grid">
         <div class="product-container">
           <div class="product-image-container">
             <img class="product-image"
@@ -201,5 +202,10 @@
         </div>
       </div>
     </div>
+
+  <script src="data/products.js"></script>
+  <script src="data/cartProducts.js"></script>
+  <script src="amazon.js"></script>
+
   </body>
 </html>
