--- a/amazon.html
+++ b/amazon.html
@@ -46,7 +46,7 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="js-cart-quantity cart-quantity">0</div>
+          <div class="js-cart-quantity cart-quantity"></div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
@@ -203,9 +203,6 @@
       </div>
     </div>
 
-  <script src="data/products.js"></script>
-  <script src="data/cartProducts.js"></script>
-  <script src="amazon.js"></script>
-
+  <script type="module" src="./scripts/amazon.js"></script>
   </body>
 </html>
